--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,14 @@ on:
 
 env:
   GO_VERSION: '1.21'
+  # Docker 镜像配置
+  # 修改为你的 Docker Registry 地址，例如：
+  # - Docker Hub: docker.io/yourusername/mallback
+  # - 私有 Registry: your-registry.com/yourusername/mallback
+  IMAGE_NAME: mallback
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     
     steps:
@@ -22,104 +27,102 @@ jobs:
       with:
         fetch-depth: 0
     
-    - name: 设置 Go 环境
-      uses: actions/setup-go@v5
+    - name: 设置 Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: 登录 Docker Registry
+      # 如果使用 Docker Hub，设置 DOCKER_USERNAME 和 DOCKER_PASSWORD secrets
+      # 如果使用私有 Registry，设置 REGISTRY_URL, REGISTRY_USERNAME 和 REGISTRY_PASSWORD secrets
+      uses: docker/login-action@v3
       with:
-        go-version: ${{ env.GO_VERSION }}
+        # 使用 Docker Hub
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        # 如果使用私有 Registry，取消下面的注释并配置
+        # registry: ${{ secrets.REGISTRY_URL }}
+        # username: ${{ secrets.REGISTRY_USERNAME }}
+        # password: ${{ secrets.REGISTRY_PASSWORD }}
     
-    - name: 获取依赖
-      run: go mod download
-    
-    - name: 运行测试
-      run: go test -v ./...
-      continue-on-error: true
-    
-    - name: 构建应用
-      env:
-        APP_VERSION: ${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}
-        BUILD_TIME: ${{ github.event.head_commit.timestamp }}
-        GIT_COMMIT: ${{ github.sha }}
-      run: |
-        go build -ldflags "-X 'main.buildTime=$(date -u +'%Y-%m-%dT%H:%M:%SZ')' -X 'main.gitCommit=${{ github.sha }}' -X 'main.appVersion=${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}'" -o mallback
-    
-    - name: 上传构建产物
-      uses: actions/upload-artifact@v4
+    - name: 提取元数据
+      id: meta
+      uses: docker/metadata-action@v5
       with:
-        name: mallback-linux-amd64
-        path: mallback
-        retention-days: 30
+        images: |
+          ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+          # 如果使用私有 Registry，使用下面的格式
+          # ${{ secrets.REGISTRY_URL }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=sha,prefix={{branch}}-
+          type=raw,value=latest,enable={{is_default_branch}}
+    
+    - name: 构建并推送 Docker 镜像
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        build-args: |
+          BUILD_TIME=${{ github.event.head_commit.timestamp || github.event.repository.pushed_at }}
+          GIT_COMMIT=${{ github.sha }}
+          APP_VERSION=${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}
 
-  build-matrix:
-    name: 构建多平台
-    runs-on: ${{ matrix.os }}
-    needs: build
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        include:
-          - os: ubuntu-latest
-            GOOS: linux
-            GOARCH: amd64
-            BINARY: mallback-linux-amd64
-          - os: windows-latest
-            GOOS: windows
-            GOARCH: amd64
-            BINARY: mallback-windows-amd64.exe
-          - os: macos-latest
-            GOOS: darwin
-            GOARCH: amd64
-            BINARY: mallback-darwin-amd64
-    
-    steps:
-    - name: 检出代码
-      uses: actions/checkout@v4
-    
-    - name: 设置 Go 环境
-      uses: actions/setup-go@v5
-      with:
-        go-version: ${{ env.GO_VERSION }}
-    
-    - name: 获取依赖
-      run: go mod download
-    
-    - name: 构建 ${{ matrix.BINARY }}
-      env:
-        GOOS: ${{ matrix.GOOS }}
-        GOARCH: ${{ matrix.GOARCH }}
-        APP_VERSION: ${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}
-        BUILD_TIME: ${{ github.event.head_commit.timestamp }}
-        GIT_COMMIT: ${{ github.sha }}
-      run: |
-        if [ "${{ matrix.GOOS }}" == "windows" ]; then
-          go build -ldflags "-X 'main.buildTime=$(date -u +'%Y-%m-%dT%H:%M:%SZ')' -X 'main.gitCommit=${{ github.sha }}' -X 'main.appVersion=${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}'" -o ${{ matrix.BINARY }}
-        else
-          go build -ldflags "-X 'main.buildTime=$(date -u +'%Y-%m-%dT%H:%M:%SZ')' -X 'main.gitCommit=${{ github.sha }}' -X 'main.appVersion=${{ github.ref == 'refs/heads/main' && 'dev' || github.ref_name }}'" -o ${{ matrix.BINARY }}
-        fi
-    
-    - name: 上传构建产物
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.BINARY }}
-        path: ${{ matrix.BINARY }}
-        retention-days: 30
-
-  release:
-    name: 创建发布版本
+  deploy:
+    name: 部署到服务器
     runs-on: ubuntu-latest
-    needs: build-matrix
-    if: github.event_name == 'release'
+    needs: build-and-push
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && secrets.DEPLOY_HOST != ''
+    env:
+      IMAGE_NAME: mallback
     
     steps:
-    - name: 下载所有构建产物
-      uses: actions/download-artifact@v4
+    - name: 部署到服务器
+      # 通过 SSH 部署
+      # 需要在 GitHub Secrets 中配置：
+      # - DEPLOY_HOST: 服务器地址（必需）
+      # - DEPLOY_USER: SSH 用户名（必需）
+      # - DEPLOY_SSH_KEY: SSH 私钥（必需）
+      # - DEPLOY_PORT: SSH 端口（可选，默认 22）
+      uses: appleboy/ssh-action@v1.0.0
       with:
-        path: ./artifacts
-    
-    - name: 创建发布版本
-      uses: softprops/action-gh-release@v1
-      with:
-        files: ./artifacts/**
-        generate_release_notes: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        host: ${{ secrets.DEPLOY_HOST }}
+        username: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_SSH_KEY }}
+        port: ${{ secrets.DEPLOY_PORT || 22 }}
+        script: |
+          # 登录 Docker Registry
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          
+          # 拉取最新镜像
+          IMAGE_TAG="${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo "拉取镜像: $IMAGE_TAG"
+          docker pull $IMAGE_TAG
+          
+          # 停止旧容器
+          echo "停止旧容器..."
+          docker stop mallback || true
+          docker rm mallback || true
+          
+          # 运行新容器
+          echo "启动新容器..."
+          docker run -d \
+            --name mallback \
+            --restart unless-stopped \
+            -p 8083:8083 \
+            -e PORT=8083 \
+            $IMAGE_TAG
+          
+          # 清理旧镜像
+          echo "清理旧镜像..."
+          docker image prune -f
+          
+          # 显示容器状态
+          echo "容器状态:"
+          docker ps | grep mallback || echo "容器未运行"
